--- a/runtime/environment-gpu.yml
+++ b/runtime/environment-gpu.yml
@@ -1,43 +1,40 @@
 name: condaenv
 channels:
   - conda-forge
-  - fastai
-  - metric-learning
-  - pytorch
-  - esri
+  - defaults
 dependencies:
-  - python=3.9.13
-  - pytorch
-  - cudatoolkit=11.3
-  - pytorch-lightning
-  - pytorch-metric-learning
-  - lightning-flash[image]
-  - torchvision
-  - torchaudio
-  - cpuonly
-  - tensorflow-gpu
-  - tensorflow-estimator
-  - tensorflow-hub
-  - numpy
-  - pandas
-  - faiss=1.7.2
-  - scikit-learn
-  - scikit-image
-  - scipy
-  - pytest
-  - pip
-  - ffmpeg-python
-  - pillow
-  - opencv
-  - keras
-  - fastai
-  - loguru
-  - tqdm
+  - cudnn=8.2.1.32=h86fa8c9_0
+  - cython=0.29.32
+  - faiss-cpu=1.7.2
+  - fastai::fastai=2.7.9
+  - ffmpeg=4.3.2
+  - ffmpeg-python=0.2.0
+  - h5py=3.1.0
+  - iopath=0.1.9
+  - keras=2.6.0
+  - librosa=0.9.2
+  - lightning-flash[video,image]=0.8.0
+  - loguru=0.6.0
+  - matplotlib=3.5.3
+  - networkx=2.8.7
+  - numba=0.55.2
+  - numpy=1.19.5
+  - nvidia::cudatoolkit=11.1.74=h6bb024c_0
+  - opencv=4.5.3
+  - oss2=2.16.0
+  - pandas=1.4.4
+  - pillow=8.4.0
+  - pip=22.3
+  - pytest=7.2.0
   - python-magic=0.4.27
-  - imageio
-  - numba
-  - hydra-core
-  - timm
-  - einops
-  - pip:
-    - augly==1.0.0
+  - python=3.9.13
+  - pytorch::pytorch=1.10.2=py3.9_cuda11.1_cudnn8.0.5_0
+  - pytorch::torchaudio=0.10.2=py39_cu111
+  - pytorch::torchvision=0.11.3=py39_cu111
+  - regex=2022.9.13
+  - scikit-image=0.19.3
+  - scikit-learn=1.1.2
+  - scipy=1.9.1
+  - tensorflow-gpu=2.6.0=cuda111py39h788eb59_2
+  - tqdm=4.64.1
+  - tslearn=0.5.2
