--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -26,10 +26,11 @@ jobs:
 
       - name: Build Image
         run: |
-          docker build runtime \
+          docker build \
             --build-arg CPU_OR_GPU=${{ matrix.proc }} \
             --tag $LOGIN_SERVER/$IMAGE:$SHA_TAG \
-            --tag $LOGIN_SERVER/$IMAGE:$LATEST_TAG
+            --tag $LOGIN_SERVER/$IMAGE:$LATEST_TAG \
+            -f ./runtime/Dockerfile .
 
       - name: Check image size
         run: |
