--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -20,6 +20,8 @@ jobs:
       IMAGE: meta-vsc-matching-runtime
       SHA_TAG: ${{ matrix.proc }}-${{ github.sha }}
       LATEST_TAG: ${{ matrix.proc }}-latest
+      GITHUB_ACTIONS_NO_TTY: true
+      SKIP_GPU: true
 
     steps:
       - uses: actions/checkout@v3
@@ -40,6 +42,31 @@ jobs:
         run: |
           docker run $LOGIN_SERVER/$IMAGE:$SHA_TAG /bin/bash \
             -c "conda run --no-capture-output -n condaenv pytest tests/test_packages.py"
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+          cache: "pip"
+
+      - name: Install requirements
+        if: ${{ matrix.proc == 'cpu' }}
+        run: pip install -r requirements.txt
+
+      - name: Prep test assets
+        if: ${{ matrix.proc == 'cpu' }}
+        run: cp .github/test_assets/*.csv data/test/
+
+      - name: Test zipping submission_quickstart
+        if: ${{ matrix.proc == 'cpu' }}
+        run: |
+          make pack-quickstart
+
+      - name: Run submission in container
+        if: ${{ matrix.proc == 'cpu' }}
+        run: |
+          make CPU_OR_GPU=${{ matrix.proc }} \
+            SUBMISSION_IMAGE=$LOGIN_SERVER/$IMAGE:$SHA_TAG \
+            test-submission
 
       - name: Log into Azure
         if: github.ref == 'refs/heads/main'
