--- a/runtime/environment-cpu.yml
+++ b/runtime/environment-cpu.yml
@@ -3,12 +3,14 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - av=9.2.0
   - cpuonly=2.0
   - cython=0.29.32
   - faiss-cpu=1.7.2
   - fastai::fastai=2.7.10
   - ffmpeg-python=0.2.0
   - h5py=3.7.0
+  - libtiff=4.4.0
   - loguru=0.6.0
   - matplotlib=3.6.2
   - networkx=2.8.8
@@ -33,6 +35,12 @@ dependencies:
   - tslearn=0.5.2
   - pip: 
     - augly[image,video]==1.0.0
+    - decord==0.6.0
     - imageio[ffmpeg]==2.25.0
     - lightning-flash[video,image]==0.8.1
+    - pytorch-lightning==1.8.6
+    - pytorchvideo==0.1.2
+    - segmentation-models-pytorch==0.3.2
     - tensorflow-cpu==2.9.1
+    - timm==0.6.12
+    - transformers==4.25.1
