--- a/runtime/environment-gpu.yml
+++ b/runtime/environment-gpu.yml
@@ -3,6 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - av=9.2.0
   - cudnn=8.2.1.32
   - cython=0.29.32
   - faiss-gpu=1.7.2
@@ -10,6 +11,7 @@ dependencies:
   - ffmpeg-python=0.2.0
   - h5py=3.7.0
   - loguru=0.6.0
+  - libtiff=4.4.0
   - matplotlib=3.6.2
   - networkx=2.8.8
   - numba=0.56.3
@@ -36,4 +38,9 @@ dependencies:
     - augly[image,video]==1.0.0
     - imageio[ffmpeg]==2.25.0
     - lightning-flash[video,image]==0.8.1
+    - pytorch-lightning==1.8.6
+    - pytorchvideo==0.1.2
+    - segmentation-models-pytorch==0.3.2
     - tensorflow-gpu==2.9.1
+    - timm==0.6.12
+    - transformers==4.25.1
